--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A lightweight JavaScript library that converts static HTML forms into AJAX-enabled forms for SleekCMS. Simply add a data-sleekcms attribute to your form and this script handles the rest.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -32,5 +34,10 @@
     "README.md"
   ],
   "unpkg": "index.js",
-  "jsdelivr": "index.js"
+  "jsdelivr": "index.js",
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
+  }
 }
